# oo_automator

./: .env.example  .gitignore  BTAnalyzer.py  Notsurebutbetterautomation.py  OOAutomator_tradelogger_2.py  OO_Automator_Playwright.py  OO_Automator_Plugin copy.py  OO_Automator_Plugin.py  OOautomator_tradelogger.py  OOautomator_tradelogger_PT_Addition.py  PHASE2_README.txt  README.md  TradeAnalyzerGap.py  csv_convertor.py  iv-dashboard.py  migrate_to_refactored.py  optionomega_automation.py  parameter_plugin_system copy.py  parameter_plugin_system.py  parameter_plugin_system_playwright.py  pyproject.toml  requirements.txt  trade_analysis_plugin.py  trade_timing_analysis_report.txt  trade_timing_analysis_results.json  user_config.json
.claude/: settings.json
Options_analyzer/: README.md  create_options_analyzer.py  main.py  requirements.txt  setup_app.py  trade_analysis_results.json  trade_analyzer.py
Options_analyzer/config/: settings.ini
Options_analyzer/models/: analytics_engine.py  trade_data.py
Options_analyzer/presenters/: main_presenter.py
Options_analyzer/utils/: calculations.py  statistical_analysis.py
Options_analyzer/views/: charts.py  dashboard.py  main_window.py
backtest_results/: optimal_conditions.json  overall_metrics.json  performance_by_entry_time.csv
docs/plans/: 2026-01-07-oo-automator-v2-design.md  (+4 more)
oo_automator/: __init__.py  config.py  main.py
pages/: test_page.py
recordings/: backtest_flow.json  selectors.json  selectors_expanded.json
tests/: __init__.py  test_config.py
utils/: __init__.py  selectors.py  waiters.py
(+179 files in other folders)
